--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,14 +38,14 @@ jobs:
 
       - name: docker version and build
         run: |
-            docker -v
-            docker build . -f Dockerfile -t $MLFLOW_DOCKER_IMAGE
-            docker images -a
+          docker -v
+          docker build . -f Dockerfile -t $MLFLOW_DOCKER_IMAGE
+          docker images -a
 
       - name: docker login and push
+        id: push-image
         run: |
           echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-        # Get Short commit id
           VERSION=${GITHUB_SHA::8}
           echo MLFLOW_DOCKER_IMAGE=$MLFLOW_DOCKER_IMAGE
           echo VERSION=$VERSION
