--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 env:
-  MLFLOW_DOCKER_IMAGE: ghcr.io/mlflow2.0
+  MLFLOW_DOCKER_IMAGE: ghcr.io/${{ github.repository }}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
