--- a/manifests/mlflow.yaml
+++ b/manifests/mlflow.yaml
@@ -22,7 +22,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: managed-csi-premium
+  storageClassName: ebs-sc
   resources:
     requests:
       storage: 50Gi
@@ -162,7 +162,7 @@ spec:
       containers:
         - name: mlflow-tracking-server-pod
           # The docker image is pulled from dockerhub.
-          image: aabccontainerregistry.azurecr.io/mlflow:__imagetag__
+          image: aabccontainerregistry.azurecr.io/mlflow:${COMMIT}
           imagePullPolicy: Always
           env: # we extract the values we set in the configmap and mount them as environmen variables in the pods.
           - name: DEFAULT_ARTIFACT_ROOT
