--- a/manifests/mlflow.yaml
+++ b/manifests/mlflow.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mlflow-configmap
+  namespace: mlflow
 data:
   DB_NAME: "mlflow-tracking-server-database"
   DB_USERNAME: "admin"
