--- a/manifests/mlflow.yaml
+++ b/manifests/mlflow.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: ebs-sc
+  storageClassName: gp2
   resources:
     requests:
       storage: 50Gi
