--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -126,14 +126,13 @@ jobs:
 
       - name: Create secret mlflow-secret
         shell: bash
-        run: |
-          kubectl delete configmap default-artifact-root -n mlflow
-          kubectl delete secret mlflow-secret -n mlflow
-          kubectl delete secret docker-registry -n mlflow
-          kubectl create configmap  default-artifact-root --from-literal=DEFAULT_ARTIFACT_ROOT=${{ secrets.DEFAULT_ARTIFACT_ROOT }} -n mlflow
-          kubectl create secret generic mlflow-secret --from-literal=DB_PASSWORD=${{ secrets.DB_PASSWORD }} -n mlflow
-          kubectl create secret  docker-registry ghcr-cred --docker-username=${{ secrets.DOCKER_USER }} --docker-password=${{ secrets.DOCKER_PASSWORD }} --docker-email=${{ secrets.DOCKER_EMAIL}} -n mlflow
         continue-on-error: true
+        run: |
+        
+          kubectl create configmap  default-artifact-root --from-literal=DEFAULT_ARTIFACT_ROOT=${{ secrets.DEFAULT_ARTIFACT_ROOT }} -n mlflow --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create secret generic mlflow-secret --from-literal=DB_PASSWORD=${{ secrets.DB_PASSWORD }} -n mlflow --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create secret  docker-registry ghcr-cred --docker-username=${{ secrets.DOCKER_USER }} --docker-password=${{ secrets.DOCKER_PASSWORD }} --docker-email=${{ secrets.DOCKER_EMAIL}} -n mlflow --dry-run=client -o yaml | kubectl apply -f -
+        
         
       # Deploy newly built changes to EKS cluster.
       - name: Deploy To EKS Cluster
