--- a/manifests/GKE/mlflow-postgresql-service.yaml
+++ b/manifests/GKE/mlflow-postgresql-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mlflow-postgresql-svc
+  name: mlflow-postgresql
   namespace: mlflow
   labels:
     mlflow: mlflow-service
