--- a/manifests/GKE/mlflow.yaml
+++ b/manifests/GKE/mlflow.yaml
@@ -80,11 +80,11 @@ spec:
           
           resources:
             limits:
-              memory: "3Gi"
-              cpu: "2"
-            requests:
-              memory: 512Mi
+              memory: "512Mi"
               cpu: "0.5"
+            requests:
+              memory: 256Mi
+              cpu: "0.3"
       imagePullSecrets:
       - name: ghcr-cred
     
