--- a/manifests/GKE/mlflow.yaml
+++ b/manifests/GKE/mlflow.yaml
@@ -19,31 +19,31 @@ spec:
         app: mlflow-tracking-server-pods
     spec:
     ##  The init container is needed only if we update the version of mlflow to do DB migration
-      initContainers:
-      - name: database-upgrade
-        image: ghcr.io/dkr290/mlflow-cicd:${COMMIT}
-        command: ['sh', '-c','mlflow db upgrade  postgresql://$DB_USERNAME:$DB_PASSWORD@$DB_URL/$DB_NAME' ]
-        env: # we extract the values we set in the configmap and mount them as environmen variables in the pods.
-          - name: DB_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: mlflow-secret
-                key: DB_PASSWORD
-          - name: DB_USERNAME
-            valueFrom:
-              configMapKeyRef:
-                name: mlflow-configmap
-                key: DB_USERNAME
-          - name: DB_URL
-            valueFrom:
-              configMapKeyRef:
-                name: mlflow-configmap
-                key: DB_HOST
-          - name: DB_NAME
-            valueFrom:
-              configMapKeyRef:
-                name: mlflow-configmap
-                key: DB_NAME
+      # initContainers:
+      # - name: database-upgrade
+      #   image: ghcr.io/dkr290/mlflow-cicd:${COMMIT}
+      #   command: ['sh', '-c','mlflow db upgrade  postgresql://$DB_USERNAME:$DB_PASSWORD@$DB_URL/$DB_NAME' ]
+      #   env: # we extract the values we set in the configmap and mount them as environmen variables in the pods.
+      #     - name: DB_PASSWORD
+      #       valueFrom:
+      #         secretKeyRef:
+      #           name: mlflow-secret
+      #           key: DB_PASSWORD
+      #     - name: DB_USERNAME
+      #       valueFrom:
+      #         configMapKeyRef:
+      #           name: mlflow-configmap
+      #           key: DB_USERNAME
+      #     - name: DB_URL
+      #       valueFrom:
+      #         configMapKeyRef:
+      #           name: mlflow-configmap
+      #           key: DB_HOST
+      #     - name: DB_NAME
+      #       valueFrom:
+      #         configMapKeyRef:
+      #           name: mlflow-configmap
+      #           key: DB_NAME
       containers:
         - name: mlflow-tracking-server-pod
           # The docker image is pulled from dockerhub.
